# lurie-calendar-feed

./: .gitignore  README.md  pyproject.toml
.github/workflows/: update-and-publish-calendar.yml
data/: lurie_events.json  review_required.json  stable_uids.json
docs/: index.html  lurie-professional-events.ics
logs/: last_run_summary.md
lurie_calendar/: __init__.py  __main__.py  cli.py  ics_writer.py  models.py  parse_event.py  pdf_extract.py  scrape_calendar.py  scrape_detail.py
tests/: test_manual_live.py  test_parse_event.py  test_pdf_extract.py  test_scrape_calendar.py  test_scrape_detail.py  test_uids_and_ics.py
tests/fixtures/: detail_with_pdfs.html  professional_event.txt  professional_index.html  public_event.txt
